--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial
- <link rel="stylesheet" href="style.css">
-</title>
+<title HTML Tutorial
+<link rel="stylesheet" href="style.css">
+/>
 <body>
 
 <h1>Introduction</h1>
