--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title HTML Tutorial
+<title> HTML Tutorial
 <link rel="stylesheet" href="style.css">
-/>
+</title>
 <body>
 
 <h1>Introduction</h1>
