--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title> HTML Tutorial
+<head>
+<meta charset = "utf-8">
+<title> HTML Tutorial </title>
 <link rel="stylesheet" href="style.css">
-</title>
+</head>
 <body>
 
 <h1>Introduction</h1>
