--- a/index.html
+++ b/index.html
@@ -56,5 +56,15 @@ I also love to play sports such as Basketball, American Football etc.
 <strong>What do you want to learn to help you in your chosen Major?</strong> <br>
 -	Basically to build more knowledge on a specific language.  <br>
 </p>
+
+<h1>My First JavaScript</h1>
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
+
+
+
 </body>
 </html>
